--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -326,6 +326,13 @@
         tags:
           - deploy
 
+    -   name: copy disk_type.py to /root/disk_type.py
+        copy: src=../../source/platform/python/disk_type.py
+            dest=/root/disk_type.py
+            mode=0755
+        tags:
+          - deploy
+
     -   name: run fdsinstall step 3 - setup storage
         shell: ./fdsinstall.py -o 5 -o 3  chdir=/root
         when: fdsinstall_pkg.changed or force_install == "yes"
