[WIN-1530] Support multi-XDI

--- a/source/java/Makefile
+++ b/source/java/Makefile
@@ -7,7 +7,7 @@ user_thrift       := $(topdir)/fdsp/FDSP.thrift $(topdir)/apis/apis.thrift $(top
 user_thrift_flag  := -r --gen java
 
 user_postdep      := compile
-user_install      := orchMgr AMAgent genkey
+user_install      := orchMgr AMAgent genkey xdi
 user_install_loc  := exe
 user_clean        := \
 	target \
@@ -26,6 +26,7 @@ compile:
 ifeq (,$(wildcard *jenkins_built_semaphore))
 	@echo "Building Java components"
 	@rm -f $(comm_dir_bin)/AMAgent
+	@rm -f $(comm_dir_bin)/xdi
 	@rm -rf $(comm_dir_lib)/java
 	@rm -rf $(comm_dir_lib)/admin-webapp
 	@mkdir -p $(comm_dir_lib)/java/
