yank redundant (and ignored) ssh option from ansible.cfg

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking=False
 scp_if_ssh = True
-ssh_args = -o ConnectTimeout=60 -o UserKnownHostsFile=/dev/null -t -F ssh.config
+ssh_args = -o UserKnownHostsFile=/dev/null -t -F ssh.config
 timeout = 300
