--- a/ansible/playbooks/provision-test-cluster-ec2.yml
+++ b/ansible/playbooks/provision-test-cluster-ec2.yml
@@ -6,18 +6,12 @@
 
     tasks:
 
-    -   debug: msg={{ lookup('env','AWS_ACCESS_KEY') }}
-        tags: debug
-
-    -   debug: msg={{ lookup('env','AWS_SECRET_KEY') }}
-        tags: debug
-    
     -   name: spin up a node in the private subnet with an auto-assigned IP
         ec2:
             instance_tags:
                 Name: codytest
                 fds_purpose: testing
-            exact_count: 1
+            exact_count: 4
             count_tag:
                 Name: codytest
                 fds_purpose: testing
@@ -36,27 +30,24 @@
             wait: yes
         register: ec2
 
-    -   debug: msg={{ ec2 }} 
-
     -   name: Add all instance public IPs to host group
         add_host: hostname={{ item.private_ip }} groupname=ec2hosts
         with_items: ec2.tagged_instances
 
-- hosts: ec2hosts
-  name: configuration play
-  user: deploy
-  gather_facts: false
+-   hosts: ec2hosts
+    name: configuration play
+    user: deploy
+    gather_facts: false
 
-  tasks:
+    tasks:
 
     -   name: wait for SSH to come up on all instances
         wait_for: host={{ inventory_hostname }} port=22 delay=1 timeout=320 state=started
 
-- hosts: ec2hosts
-  name: configuration play
-  user: deploy
-  gather_facts: true
+-   hosts: ec2hosts
+    name: configuration play
+    user: deploy
+    gather_facts: true
 
-  tasks:
-
-    -   debug: msg={{ ansible_eth0['ipv4']['address'] }}
+    tasks:
+    -   debug: msg={{ fds_om_host }}
