remove empty and unused fds-shmtx files
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/osdep/umod-linux/Makefile
+++ b/source/osdep/umod-linux/Makefile
@@ -5,8 +5,7 @@ user_cc          := \
     fds_osdep.c
 
 user_cpp         := \
-    fds-shmem.cpp \
-    fds-shmtx.cpp \
+    fds-shmem.cpp
 
 user_ar_libs     := fds-osdep
 fds-osdep        := $(user_cc) $(user_cpp)
