Move fork/exec code into the platform, clean up some platform specific stuff in the global space.
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/platform/source/Makefile
+++ b/source/platform/source/Makefile
@@ -34,9 +34,8 @@ platform_core_src :=                                     \
                      platformd_plugin.cpp                \
                      plat_agent_plugin.cpp               \
                      plat_agent.cpp                      \
-                     platform_ep_handler.cpp
-
-
+                     platform_ep_handler.cpp             \
+                     process.cpp
 
 # The sources for the public library of platform
 fds_plat_lib_cpp :=                              \
