Add inventory for bld-soak-clus, and small change to accomodate deploying to the soak cluster.

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -177,7 +177,7 @@
             - /fds/dev/hdd-*/*
             - /fds/dev/ssd-*/*
             - /fds/sys-repo
-            - /fds/user-repo
+            - /fds/user-repo/*
         tags:
            - clean
 
