--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -271,6 +271,7 @@
             default_release=fds
         with_items:
             - libpcre3
+            - libpcre3-dev
             - "libconfig++9"
             - libev4
             - libreadline5
