create  new qos lib

--- a/source/lib/Makefile
+++ b/source/lib/Makefile
@@ -1,5 +1,5 @@
 topdir           := ..
 speedup          = -j $(threads)
-user_build_dir   := blob net concurrency kvstore crypto native misc leveldb
+user_build_dir   := blob net concurrency kvstore crypto native misc leveldb qos
 
 include $(topdir)/Makefile.incl
