Fix Docker fds_base build - Apparently Dockerfiles aren't fans of comments after EXPOSE lines

--- a/docker/base_image/Dockerfile
+++ b/docker/base_image/Dockerfile
@@ -73,9 +73,9 @@ EXPOSE 8443
 EXPOSE 7000
 EXPOSE 7443
 EXPOSE 7777
-EXPOSE 4000 # java debugging
-EXPOSE 4004 # java debugging
-EXPOSE 18088 # cosbench
-EXPOSE 19088 # cosbench
+EXPOSE 4000
+EXPOSE 4004
+EXPOSE 18088
+EXPOSE 19088
 
 CMD /usr/sbin/sshd -D -o UsePAM=no
