swapped wait_for ssh task to local_action to get around ssh proxy issues. fixed headings in ansible.cfg to get ansible to actually use the ssh_args we've defined. removed '-t' from ssh_args as it caused problems with scp and sftp (likely bug in ansible). yanked now-unnecessary configs from ssh.config and added deploy user private key to repo for now
start breaking deploy_fds.yml into tasks files for inclusion elsewhere. Tweaks to ansible.cfg to make it stop ignoring certain settings, and add pipelining. start pushing bits and pieces of FDS deploy stuff to EC2 playbook.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
 host_key_checking=False
-scp_if_ssh = True
-ssh_args = -o UserKnownHostsFile=/dev/null -t -F ssh.config
 timeout = 300
+
+[ssh_connection]
+scp_if_ssh = True
+ssh_args = -o UserKnownHostsFile=/dev/null -F ./ssh.config
+pipelining=True
