--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -42,20 +42,29 @@
         add_host: hostname={{ item.private_ip }} groupname=ec2hosts
         with_items: ec2.tagged_instances
 
--   hosts: ec2hosts
-    name: configuration play
-    user: deploy
-    gather_facts: false
-
-    tasks:
-
     -   name: wait for SSH to come up on all instances
-        wait_for: host={{ inventory_hostname }} port=22 delay=1 timeout=320 state=started
+        local_action: wait_for host={{ item.private_ip }} port=22 delay=1 timeout=300 state=started
+        with_items: ec2.tagged_instances
 
 -   hosts: ec2hosts
     name: configuration play
     user: deploy
     gather_facts: true
+    sudo: true
+    vars:
+        this_is_an_ec2_node: true
+
+    handlers:
+    -   name: restart ssh
+        service: name=ssh
+            state=restarted
 
     tasks:
-    -   debug: msg={{ fds_om_host }}
+
+    -   include: ../tasks/deploy_fds/pre_deploy_setup.yml
+
+    -   include: ../tasks/deploy_fds/install_deps.yml
+
+    -   include: ../tasks/deploy_fds/add_fds_repos.yml
+
+
