--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -1,9 +1,3 @@
-Host fds-nat awo-bh-01*
-    Hostname 54.148.73.71
-    User deploy
-    IdentityFile ~/.ssh/fds-deploy_rsa
-    Port 55505
-
 Host !awo-bh-01* awo-* 10.3.*
-    ProxyCommand ssh awo-bh-01 -W %h:%p
-    IdentityFile ~/.ssh/fds-deploy_rsa
+    User deploy
+    IdentityFile ./fds-deploy_rsa
