switched things around to rely on the bastion host again instead of the VPN. wait_for now works, though it has to be executed in a separate play due to a suspected ansible bug.

--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -1,3 +1,9 @@
-Host !awo-bh-01* awo-* 10.3.*
+Host fds-nat awo-bh-01*
+    Hostname 54.148.73.71
     User deploy
-    IdentityFile ./fds-deploy_rsa
+    IdentityFile ~/.ssh/fds-deploy_rsa
+    Port 55505
+Host !awo-bh-01* awo-* 10.3.*
+    ProxyCommand ssh -i ~/.ssh/fds-deploy_rsa -p 55505 deploy@awo-bh-01 -W %h:%p
+    User deploy
+    IdentityFile ~/.ssh/fds-deploy_rsa
