--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -26,10 +26,10 @@
             key_name: fds-ie
             group_id: sg-43b9c126
             instance_type: t2.micro
-            image: ami-13e3b223
+            image: ami-f90556c9
             volumes:
                 -   device_name: /dev/sda1
-                    volume_size: 20
+                    volume_size: 30
                     delete_on_termination: true
             vpc_subnet_id: subnet-195bac40
             monitoring: no
@@ -42,13 +42,25 @@
         add_host: hostname={{ item.private_ip }} groupname=ec2hosts
         with_items: ec2.tagged_instances
 
+################################################################################
+### This is necessary for now until I can get a Github issue put in and resolved
+-   hosts: awo-bh-01
+    name: wait for EC2 instances to be reachable
+    remote_user: deploy
+    gather_facts: false
+    sudo: false
+
+    tasks:
+
     -   name: wait for SSH to come up on all instances
-        local_action: wait_for host={{ item.private_ip }} port=22 delay=1 timeout=300 state=started
-        with_items: ec2.tagged_instances
+        wait_for: host={{ item }} port=22 delay=1 timeout=300 state=started
+        with_items: groups.ec2hosts
+################################################################################
+
 
 -   hosts: ec2hosts
     name: configuration play
-    user: deploy
+    remote_user: deploy
     gather_facts: true
     sudo: true
     vars:
@@ -65,6 +77,6 @@
 
     -   include: ../tasks/deploy_fds/install_deps.yml
 
-    -   include: ../tasks/deploy_fds/add_fds_repos.yml
+#    -   include: ../tasks/deploy_fds/add_fds_repos.yml
 
 
