Partial work testing TokenBucket. Committing for backup.

--- a/source/unit-test/lib/Makefile
+++ b/source/unit-test/lib/Makefile
@@ -39,7 +39,8 @@ user_cpp          :=  \
     sharedcache_gtest.cpp \
     object_logger_test.cpp \
     HashedLocks_ut.cpp \
-	histogram_gtest.cpp 
+	histogram_gtest.cpp \
+	qos_tokbucket_gtest.cpp
 
 
 user_cc           :=
@@ -70,7 +71,8 @@ user_bin_exe      := \
     object_logger_test \
     Tracebuffer_ut \
     HashedLocks_ut \
-	histogram_gtest
+	histogram_gtest \
+	qos_tokbucket_gtest
 
 catalog_test                   := catalog_unit_test.cpp
 perfstat_unit_test             := perfstat_unit_test.cpp
@@ -87,6 +89,7 @@ kvcache_unit_test              := kvcache_unit_test.cpp
 object_logger_test             := object_logger_test.cpp
 Tracebuffer_ut		           := Tracebuffer_ut.cpp
 HashedLocks_ut		           := HashedLocks_ut.cpp
-histogram_gtest 			   := histogram_gtest.cpp 
+histogram_gtest 			   := histogram_gtest.cpp
+qos_tokbucket_gtest            := qos_tokbucket_gtest.cpp
 
 include $(topdir)/Makefile.incl
