added logic to assign node_num values to each node in abitrarily-sized and potentially-dynamic host groups - all in an attempt to appease the fds-tool gods.

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -126,6 +126,8 @@
 
     -   include: ../tasks/deploy_fds/install_fds.yml
 
+    -   include: ../tasks/deploy_fds/set_node_num.yml
+
     -   include: ../tasks/deploy_fds/post_install_setup.yml
 
     -   include: ../tasks/deploy_fds/start_fds.yml
