--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -49,6 +49,7 @@
     remote_user: deploy
     gather_facts: false
     sudo: false
+    tags: wait
 
     tasks:
 
@@ -58,8 +59,8 @@
 ################################################################################
 
 
--   hosts: ec2hosts
-    name: configuration play
+-   name: DESTRUCTIVE Deployment of FDS
+    hosts: ec2hosts
     remote_user: deploy
     gather_facts: true
     sudo: true
@@ -73,10 +74,18 @@
 
     tasks:
 
-    -   include: ../tasks/deploy_fds/pre_deploy_setup.yml
+#    -   include: ../tasks/deploy_fds/pre_deploy_setup.yml
 
-    -   include: ../tasks/deploy_fds/install_deps.yml
+#    -   include: ../tasks/deploy_fds/stop_and_clean_fds.yml
 
-#    -   include: ../tasks/deploy_fds/add_fds_repos.yml
+#    -   include: ../tasks/deploy_fds/install_deps.yml
 
+#    -   include: ../tasks/deploy_fds/uninstall_fds.yml
 
+#    -   include: ../tasks/deploy_fds/install_fds.yml
+
+    -   include: ../tasks/deploy_fds/set_node_num.yml
+
+    -   include: ../tasks/deploy_fds/post_install_setup.yml
+
+#    -   include: ../tasks/deploy_fds/start_fds.yml
