--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -26,7 +26,7 @@
             key_name: fds-ie
             group_id: sg-43b9c126
             instance_type: t2.micro
-            image: ami-f90556c9
+            image: ami-fb5506cb
             volumes:
                 -   device_name: /dev/sda1
                     volume_size: 30
@@ -74,18 +74,18 @@
 
     tasks:
 
-#    -   include: ../tasks/deploy_fds/pre_deploy_setup.yml
+    -   include: ../tasks/deploy_fds/pre_deploy_setup.yml
 
-#    -   include: ../tasks/deploy_fds/stop_and_clean_fds.yml
+    -   include: ../tasks/deploy_fds/stop_and_clean_fds.yml
 
-#    -   include: ../tasks/deploy_fds/install_deps.yml
+    -   include: ../tasks/deploy_fds/install_deps.yml
 
-#    -   include: ../tasks/deploy_fds/uninstall_fds.yml
+    -   include: ../tasks/deploy_fds/uninstall_fds.yml
 
-#    -   include: ../tasks/deploy_fds/install_fds.yml
+    -   include: ../tasks/deploy_fds/install_fds.yml
 
     -   include: ../tasks/deploy_fds/set_node_num.yml
 
     -   include: ../tasks/deploy_fds/post_install_setup.yml
 
-#    -   include: ../tasks/deploy_fds/start_fds.yml
+    -   include: ../tasks/deploy_fds/start_fds.yml
