--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,4 +4,4 @@ timeout = 300
 
 [ssh_connection]
 scp_if_ssh = True
-ssh_args = -o UserKnownHostsFile=/dev/null -F ./ssh.config
+ssh_args = -o UserKnownHostsFile=/dev/null -o ControlMaster=auto -o ControlPersist=60s -F ./ssh.config
