FS-524 TokenMigrationMgr headed and skeleton cpp and unit test.

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -25,7 +25,8 @@ user_cpp          :=                   \
     ObjMeta.cpp                        \
     SmObjDb.cpp                        \
     SMSvcHandler.cpp                   \
-    MockSMCallbacks.cpp
+    MockSMCallbacks.cpp                \
+    TokenMigrationMgr.cpp
 
 user_ar_libs      := fds-smlib
 fds-smlib         := $(user_cpp)
