--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -3,6 +3,8 @@
     connection: local
     hosts: localhost
     gather_facts: False
+    vars_files:
+    -   ../vars_files/credentials/fds-deploy_rsa.yml
 
     tasks:
 
@@ -13,6 +15,9 @@
     -   name: check for instance_count
         fail: msg="You must supply a value for instance_count"
         when: instance_count is not defined
+
+    -   name: copy FDS deploy key locally
+        include: ../tasks/deploy_fds/copy_fds_deploy_key.yml
 
     -   name: spin up a node in the private subnet with an auto-assigned IP
         ec2:
