--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -3,7 +3,9 @@ Host fds-nat awo-bh-01*
     User deploy
     IdentityFile ~/.ssh/fds-deploy_rsa
     Port 55505
+    UserKnownHostsFile /dev/null
 Host !awo-bh-01* awo-* 10.3.*
     ProxyCommand ssh -i ~/.ssh/fds-deploy_rsa -p 55505 deploy@awo-bh-01 -W %h:%p
     User deploy
     IdentityFile ~/.ssh/fds-deploy_rsa
+    UserKnownHostsFile /dev/null
