--- a/ansible/playbooks/teardown_ec2_cluster.yml
+++ b/ansible/playbooks/teardown_ec2_cluster.yml
@@ -3,7 +3,9 @@
     connection: local
     hosts: localhost
     gather_facts: False
-
+    vars_files:
+      -   ../vars_files/credentials/aws_fds_testing.yml
+      -   ../vars_files/credentials/fds-deploy_rsa.yml
     tasks:
 
     -   name: check for instance_name_tag
@@ -12,6 +14,8 @@
 
     -   name: tear down tag-matched instances
         ec2:
+            aws_access_key: "{{ aws_access_key }}"
+            aws_secret_key: "{{ aws_secret_key }}"
             instance_tags:
                 Name: "{{ instance_name_tag }}"
                 fds_purpose: testing
