added logstash restart to update script, plus start_position => 'beginning' to logstash config to ensure consistent updates daily

--- a/ansible/templates/logstash/config/aws-billing.conf
+++ b/ansible/templates/logstash/config/aws-billing.conf
@@ -4,12 +4,14 @@ input {
         path => "{{ aws_billing_dir }}/*-aws-cost-allocation-20*-*.csv"
         sincedb_path => "/var/lib/logstash/sincedb_monthly_billing"
         type => "cost-allocation"
+        start_position => "beginning"
     }
 
     file {
         path => "{{ aws_billing_dir }}/*-aws-billing-detailed-line-items-with-resources-and-tags-20*-*.csv"
         sincedb_path => "/var/lib/logstash/sincedb_hourly_billing"
         type => "detailed-line-items"
+        start_position => "beginning"
     }
 
 }
