--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -4,6 +4,6 @@ Host fds-nat awo-bh-01*
     IdentityFile ~/.ssh/fds-deploy_rsa
     Port 55505
 Host !awo-bh-01* awo-* 10.3.*
-    ProxyCommand ssh -i ~/.ssh/fds-deploy_rsa -p 55505 deploy@awo-bh-01 -W %h:%p
+    ProxyCommand ssh -i ~/.ssh/fds-deploy_rsa -p 55505 deploy@54.148.73.71 -W %h:%p
     User deploy
     IdentityFile ~/.ssh/fds-deploy_rsa
