--- a/ansible/tasks/deploy_fds/deploy_fds.yml
+++ b/ansible/tasks/deploy_fds/deploy_fds.yml
@@ -2,7 +2,7 @@
 - include: stop_fds.yml
 
 - include: clean_fds.yml
-  when: clean_fds is defined and clean_fds == "yEs"
+  when: clean_fds is defined and clean_fds == "yes"
 
 - include: install_deps.yml
 
