--- a/ansible/tasks/deploy_fds/post_install_setup.yml
+++ b/ansible/tasks/deploy_fds/post_install_setup.yml
@@ -15,7 +15,7 @@
 
 -   name: run fdsinstall step 3 - setup storage
     shell: ./fdsinstall.py -o 5 -o 3  chdir=/root
-    when: fdsinstall_pkg.changed or (force is defined and force == "yes")
+    when: (clean_fds is defined and clean_fds == "yes") and (force is defined and force == "yes")
     tags:
         - post-install
 
