Initial skeleton class for MigrationExecutor

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -26,7 +26,8 @@ user_cpp          :=                   \
     SmObjDb.cpp                        \
     SMSvcHandler.cpp                   \
     MockSMCallbacks.cpp                \
-    TokenMigrationMgr.cpp
+    TokenMigrationMgr.cpp              \
+	MigrationExecutor.cpp
 
 user_ar_libs      := fds-smlib
 fds-smlib         := $(user_cpp)
