switched to recursive chown of entire pairing home dir for simplicity's sake

--- a/docker/base_image/Dockerfile
+++ b/docker/base_image/Dockerfile
@@ -59,8 +59,8 @@ RUN mkdir -p /etc/service
 ADD runit-ssh /etc/service/ssh
 ADD runit /etc/runit
 
-# fix /home/pairing/.zshrc ownership
-RUN chown pairing /home/pairing/.zshrc
+# fix /home/pairing ownership
+RUN chown -R pairing /home/pairing
 
 RUN mkdir -p /var/run/sshd
 RUN mkdir /root/.ssh
