--- a/source/Makefile
+++ b/source/Makefile
@@ -40,8 +40,9 @@ endif
 # Bail out early if we don't have a JAVA_HOME
 # This needs to go here, including it later causes make devsetup fail.
 ifeq ($(JAVA_HOME),)
-    $(error "JAVA_HOME needs to be configured.  If you have just installed Java, please \
-      'source /etc/profile.d/jdk.sh' and try your build again.  You can also terminate  \
+    $(error "JAVA_HOME is not configured.  This typically happens during creation of a new \
+      development environment (devsetup e.g., ansible).  You can resolve this by running 'source \
+      /etc/profile.d/jdk.sh' in your shell and trying your build again.  You can also terminate \
       your shell and login again.")
 endif
 
