--- a/source/test/testsuites/FourNodeCluster.ini
+++ b/source/test/testsuites/FourNodeCluster.ini
@@ -1,7 +1,7 @@
 [harness]
 # Parameters for qaautotest
 test_source_dir: ./testcases
-log_dir: ~/tests/TwoNodeCluster
+log_dir: ~/tests/FourNodeCluster
 log_level: 10               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
 stop_on_fail: True
 run_as_root: False
@@ -9,7 +9,7 @@ threads: 1
 iterations: 1
 
 # Parameters for the test suite. fds_config_file is required.
-fds_config_file: ../cfg/TwoNodeCluster.cfg
+fds_config_file: ../cfg/FourNodeCluster.cfg
 
 # fds_source_dir is required if you want to run from a development
 # environment and you are not starting the test from your ~/source
