FS-632 Improvements - Added wildcard SSL cert & key into encrypted ansible vault - Added nginx deploy to fds_deploy with optional "ssl_enabled" variable - Currently works with single-OM, multi-OM will require some additional   changes.
Note the following inventory items are required when enabling SSL:

ssl_enabled=yes
ssl_api_hostname=node.formationds.com
ssl_web_hostname=nodeweb.formationds.com

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -115,7 +115,8 @@
     hosts: all
     gather_facts: yes
     sudo: yes
+    vars_files:
+    -   ../vars_files/credentials/ssl_certs.yml
 
     tasks:
-
     -   include: ../tasks/deploy_fds/deploy_fds.yml
