--- a/ansible/tasks/deploy_fds/deploy_fds.yml
+++ b/ansible/tasks/deploy_fds/deploy_fds.yml
@@ -15,3 +15,6 @@
 - include: post_install_setup.yml
 
 - include: start_fds.yml
+
+- include: ../nginx/nginx_ssl_proxy.yml
+  when: ssl_enabled is defined and ssl_enabled == "yes"
