consolidate down to one formation.conf.j2 template. add appropriate defaulting of node IDs when node_num is not present (mostly just when configs are rendered with the generate_config_files playbook, as it doesn't set node_num)

--- a/ansible/tasks/deploy_fds/post_install_setup.yml
+++ b/ansible/tasks/deploy_fds/post_install_setup.yml
@@ -21,7 +21,7 @@
 
 -   name: render formation.conf
     template:
-        src=../templates/formation.conf.j2
+        src=../../source/test/formation.conf.j2
         dest=/fds/sbin/deploy_formation.conf
         owner=root
         group=root
