updated helper script and playbook to allow quick and easy checking of config file rendering

--- a/ansible/playbooks/deploy_config_files_only.yml
+++ b/ansible/playbooks/deploy_config_files_only.yml
@@ -1,6 +1,6 @@
 ---
 -   name: deploy rendered FDS config files without code
-    hosts: "{{ target_hosts }}"
+    hosts: all
     sudo: yes
 
     tasks:
