Migration async communication sequence handler.

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -27,7 +27,9 @@ user_cpp          :=                   \
     SMSvcHandler.cpp                   \
     MockSMCallbacks.cpp                \
     TokenMigrationMgr.cpp              \
-	MigrationExecutor.cpp
+	MigrationExecutor.cpp 			   \
+	MigrationClient.cpp 			   \
+	MigrationUtility.cpp 			   
 
 user_ar_libs      := fds-smlib
 fds-smlib         := $(user_cpp)
