--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -19,7 +19,8 @@ user_cpp          := \
     sm_token_compactor_gtest.cpp \
     sm_token_state_gtest.cpp     \
     sm_tier_migration_gtest.cpp  \
-    sm_token_migration_gtest.cpp
+    sm_token_migration_gtest.cpp \
+    sm_token_migration_seqnum_gtest.cpp 
 
 user_no_style     :=
 
@@ -35,7 +36,8 @@ user_bin_exe      := \
     sm_tokcompactor_gtest \
     sm_token_state_gtest  \
     sm_tier_migration_gtest \
-    sm_token_migration_gtest
+    sm_token_migration_gtest \
+    sm_token_migration_seqnum_gtest
 
 
 sm_objectstore_gtest   := object_store_unit_test.cpp
@@ -50,5 +52,6 @@ sm_tokcompactor_gtest := sm_token_compactor_gtest.cpp
 sm_token_state_gtest  := sm_token_state_gtest.cpp
 sm_tier_migration_gtest := sm_tier_migration_gtest.cpp
 sm_token_migration_gtest := sm_token_migration_gtest.cpp
+sm_token_migration_seqnum_gtest := sm_token_migration_seqnum_gtest.cpp 
 
 include $(test_topdir)/Makefile.sm
