--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -300,6 +300,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.4</version>
+		</dependency>
 
 
         <!-- Togglz Dependencies -->
