--- a/source/test/testsuites/TwoNodeOneTransientCluster.ini
+++ b/source/test/testsuites/TwoNodeOneTransientCluster.ini
@@ -1,7 +1,7 @@
 [harness]
 # Parameters for qaautotest
 test_source_dir: ./testcases
-log_dir: ~/tests/TwoNodeCluster
+log_dir: ~/tests/TwoNodeOneTransientCluster
 log_level: 10               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
 stop_on_fail: True
 run_as_root: False
