force apt-mirror playbook to use fds-deploy key

--- a/ansible/playbooks/apt-mirror.yml
+++ b/ansible/playbooks/apt-mirror.yml
@@ -4,6 +4,8 @@
     gather_facts: false
     sudo: true
     remote_user: deploy
+    vars:
+        - ansible_ssh_key: ~/.ssh/fds-deploy_rsa
 
     tasks:
 
