--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -117,6 +117,7 @@
     sudo: yes
     vars_files:
     -   ../vars_files/credentials/ssl_certs.yml
+    -   ../vars_files/multi_om_setup.yml
 
     tasks:
     -   include: ../tasks/deploy_fds/deploy_fds.yml
