--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -4,6 +4,7 @@
     hosts: localhost
     gather_facts: False
     vars_files:
+    -   ../vars_files/multi_om_setup.yml
     -   ../vars_files/credentials/aws_fds_testing.yml
     -   ../vars_files/credentials/fds-deploy_rsa.yml
 
