More hybrid tiering changes

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -22,6 +22,7 @@ user_cpp          :=                   \
     ObjStats.cpp                       \
     TierMigration.cpp                  \
     TierEngine.cpp                     \
+    HybridTierCtrlr.cpp		       \
     ObjMeta.cpp                        \
     SmObjDb.cpp                        \
     SMSvcHandler.cpp                   \
