fix localhost inventory and generate_config_files playbook to work with multi-om. added tags to config sanity check tasks

--- a/ansible/playbooks/generate_config_files.yml
+++ b/ansible/playbooks/generate_config_files.yml
@@ -3,8 +3,11 @@
     hosts: localhost
     vars_files:
         - ../vars_files/config_files_dev.yml
+        - ../vars_files/multi_om_setup.yml
 
     tasks:
+    -   include: ../tasks/deploy_fds/config_sanity_check.yml
+
     -   name: render fds-src/source/config/etc config files
         template:
             src: ../../source/config/etc/{{item}}.conf.j2
